# flot_inventory

./: .env.example  .gitignore  PLAN.md  PLAN_enrichment.md  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/models/: __init__.py  base.py  book.py  capture_session.py  item.py  room.py  tag.py
app/repositories/: base.py  book_repo.py  item_repo.py  room_repo.py
app/routers/: capture.py  dashboard.py  items.py  rooms.py
app/schemas/: book.py  capture.py  export.py  item.py  product_search.py  room.py
app/services/: book_service.py  duplicate_detector.py  export_service.py  image_service.py  local_vision.py  product_search.py  transcription.py  value_estimator.py  video_processor.py  vision.py
app/static/css/: base.css  capture.css  components.css  dashboard.css
app/static/js/: capture.js
app/templates/: base.html  dashboard.html
app/templates/capture/: review.html  session.html
app/templates/capture/partials/: detected_item.html  mode_switch_prompt.html
app/templates/export/: options.html
app/templates/insurance/: summary.html
app/templates/items/: detail.html  edit.html  enrich_results.html  grid.html
app/templates/rooms/: detail.html  floor_plan.html  list.html
app/templates/search/: results.html
app/viewmodels/: capture_vm.py  dashboard_vm.py  export_vm.py  insurance_vm.py  item_vm.py  room_vm.py  search_vm.py
app/views/: capture.py  export.py  insurance.py  items.py  search.py
models/: export_yoloworld.py
scripts/: export_yoloworld.py  modal_vision.py
